config: fix cors